<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/set"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
-

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/sex"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_sex"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/male"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />
- 

    

     <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/weight"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_weight"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/_55"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:gravity="right|center_vertical"
            android:text="@string/kg"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />
- 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/height"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_height"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/_170"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:gravity="right|center_vertical"
            android:text="@string/cm"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />
- 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/StepNumber"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_steps"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/_2"
            android:layout_marginRight="5dp"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:gravity="right|center_vertical"
            android:text="@string/bu"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />
- 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/paiming"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/user_number"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/_55"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:gravity="right|center_vertical"
            android:text="@string/ming"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />

</LinearLayout>