<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/set"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/set"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
    <LinearLayout
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal"
        
         >

        <TextView
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/portrait"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />
        <ImageView 
            android:contentDescription="@string/_0"
            android:id="@+id/picture_"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            android:gravity="right|center_vertical"
            android:src="@drawable/ic_launcher"
      />

       
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />
     <LinearLayout
        android:id="@+id/set_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/name"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/inputname"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>
     <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />

    <LinearLayout
        android:id="@+id/sex"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/sex"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/sex_"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_male"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="@drawable/selector_color_set"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="-15dp"
                android:background="@drawable/selector_female"
                android:button="@null"
                android:gravity="center"
                android:text="@string/female"
                android:textColor="@drawable/selector_color_set"
                android:textSize="15sp" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />

    

    <LinearLayout
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/weight"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/weight_"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/_55"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:gravity="right|center_vertical"
            android:text="@string/kg"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

   

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />

    <LinearLayout
        android:id="@+id/sensitivy"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/sensitivy"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sensitivy_"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/_1"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />

    <LinearLayout
        android:id="@+id/lengh_step"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/LengthOfStep"
            android:textColor="#7B7B7B"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lengh_step_"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/_55"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:gravity="right|center_vertical"
            android:text="@string/cm"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#d0d0d0" />

</LinearLayout>